<resources>
    <string name="app_name">Mobilcsomag vásárlás</string>
    <string name="password">Jelszó</string>
    <string name="name">Név</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">Email cím</string>
    <string name="password_again">Jelszó újra</string>
    <string name="cancel">Mégse</string>
    <string name="product_description">Telefoncsomag leírása.</string>
    <string name="googleLogin">Bejelentkezés google fiókkal</string>
    <string name="anonymLogin">Bejelentkezés névtelenül</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Vásárló</string>
    <string name="phone_number">Telefonszám</string>
    <string name="phoneLogin">Bejelentkezés telefonszámmal</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Lépj be vagy regisztrálj</string>
    <string name="action_sign_in_short">Belépés</string>
    <string name="welcome">"Üdv !"</string>
    <string name="invalid_username">Nem valid felhasználónév</string>
    <string name="invalid_password">A jelszónak több mint 5 karakternek kell lennie.</string>
    <string name="login_failed">"Hibás bejelentkezés"</string>
    <string name="sendCode">Kód küldése SMS-ben</string>
    <string name="enterPhone">Add meg a telefonszámod</string>
    <string name="modify">Mentés</string>
    <string name="back">Vissza</string>
    <string name="delete">Törlés</string>
    <string name="save">mentés</string>
    <string name="select_sms_package">Válassz SMS csomagot</string>
    <string name="select_data_package">Válassz adat csomagot</string>
    <string name="purchase">Megrendelés</string>
    <string name="view_purchased_packages">Vásárolt csomagok megtekintése</string>
    <string name="verification_code">Megerősítő kód</string>
    <string name="verify_code">Megerősítés</string>
</resources>